maze.lessons.maze.island.IslandMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
def KeepHandOnSideWall() {
^Escaper:11: error: expected class or object definition
def talahaine() {
^Escaper:21: error: expected start of definition
override def run() {
         ^