maze.lessons.maze.island.IslandMaze.scala.code
def KeepHandOnSideWall() {
	if(!estFaceMur){
		avance
	}else{gauche
	avance
	}
}


def talahaine() {

while(!estSurBiscuit()){
	if(!estFaceMur){
		avance
	}else{gauche
	avance
	}
}
}
override def run() {
	while(getX()!=0){
		if(!estFaceMur){
			avance}else{
		KeepHandOnSideWall()
	}
	talahaine()
	prendBiscuit
}
